Set up the correct folder for future pages and styles

--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Irfan Syafie | Future Software Developer</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
     <!-- Navigation bar -->
