Created a navigation bar with proper font and structure using float

--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,13 @@
 <html lang="en">
   <head>
     <title>Irfan Syafie | Future Software Developer</title>
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Navigation bar -->
@@ -11,6 +17,7 @@
       <li>Education</li>
       <li>Projects</li>
       <li>Blogs</li>
+      <li id="navBarName">Irfan Syafie</li>
     </ul>
   </body>
 </html>
