Add header, profile picture and about me text. some modifications also has been done:
- the text are now use lower case for all aspect

--- a/pages/home.html
+++ b/pages/home.html
@@ -13,11 +13,33 @@
   <body>
     <!-- Navigation bar -->
     <ul class="navBar">
-      <li>About Me</li>
-      <li>Education</li>
-      <li>Projects</li>
-      <li>Blogs</li>
-      <li id="navBarName">Irfan Syafie</li>
+      <li>about me</li>
+      <li>education</li>
+      <li>work</li>
+      <li>projects</li>
+      <li>blogs</li>
+      <li id="navBarName">irfan syafie</li>
     </ul>
+
+    <h1 id="homeTitle">
+      i build things<br />
+      for fun.
+    </h1>
+
+    <!-- Profile picture and about me text -->
+    <div id="aboutMeContainer">
+      <img
+        id="profilePicture"
+        src="../assets/spiderman.jpg"
+        alt="Irfan Syafie"
+      />
+      <div id="aboutMeText">
+        <h2 id="profileName">hello there!</h2>
+        <p>
+          im irfan. a student, passionate gamer<br />
+          and aspiring software developer.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
