feat: add multiple section div under the aboutMe section
- makes the navbar to stays at the top

--- a/pages/home.html
+++ b/pages/home.html
@@ -12,14 +12,17 @@
   </head>
   <body>
     <!-- Navigation bar -->
-    <ul class="navBar">
-      <li>about me</li>
-      <li>education</li>
-      <li>work</li>
-      <li>projects</li>
-      <li>blogs</li>
-      <li id="navBarName">irfan syafie</li>
-    </ul>
+    <div id="navBarContainer">
+      <ul class="navBar">
+        <li>about me</li>
+        <li>education</li>
+        <li>work</li>
+        <li>projects</li>
+        <li>blogs</li>
+        <li id="navBarName">irfan syafie</li>
+      </ul>
+    </div>
+    
 
     <h1 id="homeTitle">
       i build things<br />
@@ -40,6 +43,35 @@
           and aspiring software developer.
         </p>
       </div>
+    </div>
+
+    <!-- Multiple sections container -->
+    <div id="multipleSection">
+      <!-- Blog section -->
+      <div class="card">
+        <p class="sectionTitle">blog</p>
+        <p>
+          I like to write. Maybe even thinking of doing a book when I was
+          little. But here I am, sharing my thoughts and anything that I like :p
+        </p>
+      </div>
+
+      <!-- Education section -->
+      <div class="card">
+        <p class="sectionTitle">education</p>
+        <p>
+          I am currently a software development student at UTeM. Never thought
+          that I would get into this field but here I am writing codes and
+          debugging them.
+        </p>
+      </div>
+
+      <!-- Work section -->
+      <div class="card">
+        <p class="sectionTitle">work experience</p>
+        <p>
+          Currently I'm doing my internship at a fintech company. But, I was also a barista and mostly worked in FnB industry before focusing on software work.
+        </p>
     </div>
   </body>
 </html>
