feat: add a new section for the multipleSection div

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Irfan Syafie | Future Software Developer</title>
+    <title>Irfan Syafie | Software Developer</title>
     <link rel="stylesheet" href="../styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +22,6 @@
         <li id="navBarName">irfan syafie</li>
       </ul>
     </div>
-    
 
     <h1 id="homeTitle">
       i build things<br />
@@ -70,8 +69,19 @@
       <div class="card">
         <p class="sectionTitle">work experience</p>
         <p>
-          Currently I'm doing my internship at a fintech company. But, I was also a barista and mostly worked in FnB industry before focusing on software work.
+          Currently I'm doing my internship at a fintech company. But, I was
+          also a barista and mostly worked in FnB industry before focusing on
+          software work.
         </p>
+      </div>
+
+      <div class="card">
+        <p class="sectionTitle">projects</p>
+        <p>
+          I have done some small projects during my free and uni time. Feel free
+          to look over my projects here.
+        </p>
+      </div>
     </div>
   </body>
 </html>
