feat: add mobile responsiveness for navbar

--- a/pages/home.html
+++ b/pages/home.html
@@ -39,8 +39,7 @@
       <div id="aboutMeText">
         <h2 id="profileName">hello there!</h2>
         <p>
-          im irfan. a student, passionate gamer<br />
-          and aspiring software developer.
+          im irfan. a student, passionate gamer and aspiring software developer.
         </p>
       </div>
     </div>
