feat: add reload home page when pressing name at navbar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li>work</li>
         <li>projects</li>
         <li>blogs</li>
-        <li id="navBarName">irfan syafie</li>
+        <li id="navBarName"><a href="index.html">irfan syafie</a></li>
       </ul>
     </div>
 
