feat: removed multiple divs when injecting navbar.html to ensure clean code

--- a/index.html
+++ b/index.html
@@ -14,16 +14,7 @@
   </head>
   <body>
     <!-- Navigation bar -->
-    <div id="navBarContainer">
-      <ul class="navBar">
-        <li>about me</li>
-        <li>education</li>
-        <li>work</li>
-        <li>projects</li>
-        <li>blogs</li>
-        <li id="navBarName"><a href="index.html">irfan syafie</a></li>
-      </ul>
-    </div>
+    <div id="navBarContainer"></div>
 
     <h1 id="homeTitle">
       i build things<br />
@@ -84,5 +75,8 @@
         </p>
       </div>
     </div>
+
+    <!-- JavaScript -->
+    <script src="main.js"></script>
   </body>
 </html>
