--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
 
       <!-- Education section -->
       <div class="card">
-        <p class="sectionTitle">education</p>
-        <p>
-          I am currently a software development student at UTeM. Never thought
-          that I would get into this field but here I am writing codes and
-          debugging them.
-        </p>
+        <a href="/pages/education.html" class="cardLink">
+          <p class="sectionTitle">education</p>
+          <p>
+            I am currently a software development student at UTeM. Never thought
+            that I would get into this field but here I am writing codes and
+            debugging them.
+          </p>
+        </a>
       </div>
 
       <!-- Work section -->
