Added work.html for work section on navBar
- Added the link for the work section container to go to work.html page

--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
 
       <!-- Work section -->
       <div class="card">
-        <p class="sectionTitle">work experience</p>
-        <p>
-          Currently I'm doing my internship at a fintech company. But, I was
-          also a barista and mostly worked in FnB industry before focusing on
-          software work.
-        </p>
+        <a href="/pages/work.html" class="cardLink">
+          <p class="sectionTitle">work</p>
+          <p>
+            Currently I'm doing my internship at a fintech company. But, I was
+            also a barista and mostly worked in FnB industry before focusing on
+            software work.
+          </p>
+        </a>
       </div>
 
       <div class="card">
