feat: aded link to navBar for blogs section
- Added link for blog section on the multiple container section

--- a/index.html
+++ b/index.html
@@ -40,11 +40,14 @@
     <div id="multipleSection">
       <!-- Blog section -->
       <div class="card">
-        <p class="sectionTitle">blog</p>
-        <p>
-          I like to write. Maybe even thinking of doing a book when I was
-          little. But here I am, sharing my thoughts and anything that I like :p
-        </p>
+        <a href="/pages/blog.html" class="cardLink">
+          <p class="sectionTitle">blog</p>
+          <p>
+            I like to write. Maybe even thinking of doing a book when I was
+            little. But here I am, sharing my thoughts and anything that I like
+            :p
+          </p>
+        </a>
       </div>
 
       <!-- Work section -->
