Fixed some text and add a title for blog page
feat: Add a new title inside the blog page and fixed the text on navbar

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Education | Irfan Syafie</title>
     <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/pages/blog.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,6 +15,11 @@
   <body>
     <!-- Navigation bar -->
     <div id="navBarContainer"></div>
+
+    <h1 id="homeTitle">
+      words that might <br />
+      be worth to read.
+    </h1>
 
     <!-- JavaScript -->
     <script src="../main.js"></script>
