Add dynamic blog post listing and improve styles
Implemented dynamic loading of blog posts on the blog page using data from blog-posts.json. Added the first blog post image, updated blog post metadata, and improved blog and card styling for better UI consistency. Changed blog page title and ensured images display correctly in blog posts.

--- a/pages/blog-posts/1.html
+++ b/pages/blog-posts/1.html
@@ -48,7 +48,7 @@
           whole lot more adventure with my team! :)
         </p>
 
-        <img src="" />
+        <img src="/assets/first-week-internship.jpg" />
       </div>
     </article>
 
