--- a/pages/blog.html
+++ b/pages/blog.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Education | Irfan Syafie</title>
+    <title>Blog | Irfan Syafie</title>
     <link rel="stylesheet" href="/styles/main.css" />
     <link rel="stylesheet" href="/styles/pages/blog.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -20,6 +20,9 @@
       words that might <br />
       be worth to read.
     </h1>
+
+    <!-- Blog posts -->
+    <div id="blogPostsContainer"></div>
 
     <!-- JavaScript -->
     <script src="../main.js"></script>
